fix issues with selection of currency in responsive; remove extra space in mobile size

--- a/src/pages/Options/CreateMarket/media.scss
+++ b/src/pages/Options/CreateMarket/media.scss
@@ -132,17 +132,21 @@
         
     }
 
-    .button-div-responsive {
-        display: block !important;
-
-        &__upper {
-            margin-bottom: 10px;
-            width: 100%;
-        }
-
-        &__bottom {
-            margin-top: 10px;
-            width: 100%;
+    .progress-tracker-controls {
+        margin-bottom: 25px !important;
+        &__button-div-responsive {
+            display: block !important;
+    
+            &__upper {
+                margin-bottom: 10px;
+                width: 100%;
+            }
+    
+            &__bottom {
+                margin-top: 10px;
+                width: 100%;
+            }
         }
     }
+    
 }
